Reduce allocations from AtomicRefs