@@ -6,15 +6,17 @@ import java.lang.management.ThreadMXBean;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
-import java.util.concurrent.CopyOnWriteArrayList;
+import java.util.concurrent.ConcurrentLinkedQueue;
+import java.util.stream.Collectors;
 import me.lucko.spark.paper.common.sampler.ThreadDumper;
 import me.lucko.spark.paper.common.util.ThreadFinder;
 import me.lucko.spark.paper.proto.SparkSamplerProtos;
 import org.jetbrains.annotations.NotNull;
 
 public final class MultiLoopThreadDumper implements ThreadDumper {
-    public static final List<String> REGISTRY = new CopyOnWriteArrayList<>();
+    public static final ConcurrentLinkedQueue<String> REGISTRY = new ConcurrentLinkedQueue<>();
     private final ThreadFinder threadFinder = new ThreadFinder();
+    private static final int STACK_TRACE_DEPTH = 10;
 
     @Override
     public boolean isThreadIncluded(long threadId, String threadName) {
@@ -29,18 +31,27 @@ public final class MultiLoopThreadDumper implements ThreadDumper {
     @Override
     public ThreadInfo @NotNull [] dumpThreads(ThreadMXBean threadBean) {
         return this.threadFinder.getThreads()
-                                .filter((thread) -> this.isThreadIncluded(thread.threadId(), thread.getName()))
-                                .map((thread) -> threadBean.getThreadInfo(thread.threadId(), Integer.MAX_VALUE))
-                                .filter(Objects::nonNull).toArray(ThreadInfo[]::new);
+                                .filter(thread -> isThreadIncluded(thread.threadId(), thread.getName()))
+                                .map(thread -> threadBean.getThreadInfo(thread.threadId(), STACK_TRACE_DEPTH))
+                                .filter(Objects::nonNull)
+                                .toArray(ThreadInfo[]::new);
     }
 
     @Override
     public SparkSamplerProtos.SamplerMetadata.ThreadDumper getMetadata() {
-        return SparkSamplerProtos.SamplerMetadata.ThreadDumper.newBuilder().setType(SparkSamplerProtos.SamplerMetadata.ThreadDumper.Type.SPECIFIC)
-                                                              .addAllIds(validThreadIds()).build();
+        ThreadInfo[] threads = dumpThreads(ManagementFactory.getThreadMXBean());
+
+        return SparkSamplerProtos.SamplerMetadata.ThreadDumper.newBuilder()
+                                                              .setType(SparkSamplerProtos.SamplerMetadata.ThreadDumper.Type.SPECIFIC)
+                                                              .addAllIds(validThreadIds(threads))
+                                                              .build();
     }
 
-    public List<Long> validThreadIds() {
-        return Arrays.stream(dumpThreads(ManagementFactory.getThreadMXBean())).map(ThreadInfo::getThreadId).toList();
+    public List<Long> validThreadIds(ThreadInfo[] threads) {
+        return Arrays.stream(threads).map(ThreadInfo::getThreadId).collect(Collectors.toList());
+    }
+
+    public static void removeRegistryEntry(String prefix) {
+        REGISTRY.remove(prefix);
     }
 }
